# sdpa-binary128

./: ChangeLog  Dockerfile_ubuntu22.04  Makefile.am  Makefile.in  README.md  configure  configure.ac  configure.in  sdpa_algebra.h  sdpa_chordal.cpp  sdpa_dataset.cpp  sdpa_dataset.h  sdpa_io.cpp  sdpa_jordan.cpp  sdpa_jordan.h  sdpa_linear.cpp  sdpa_linear.h  sdpa_main.cpp  sdpa_newton.cpp  sdpa_newton.h  sdpa_parts.cpp  sdpa_parts.h  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.cpp  sdpa_tool.h  sdpa_tool.h.in
SDPLIB/: go.sh
SDPLIB/data/: arch0.dat-s.xz  arch0.result.xz  arch2.dat-s.xz  arch2.result.xz  arch4.dat-s.xz  arch4.result.xz  arch8.dat-s.xz  arch8.result.xz  control1.result.xz  control10.result.xz  control11.result.xz  control2.result.xz  control3.result.xz  control4.result.xz  control5.result.xz  control6.result.xz  control7.result.xz  control8.result.xz  control9.result.xz  equalG11.result.xz  gpp100.result.xz  gpp124-1.result.xz  gpp124-2.result.xz  gpp124-3.result.xz  gpp124-4.result.xz  gpp250-1.result.xz  gpp250-2.result.xz  gpp250-3.result.xz  gpp250-4.result.xz  gpp500-1.result.xz  gpp500-2.result.xz  gpp500-3.result.xz  gpp500-4.result.xz  hinf1.result.xz  hinf10.result.xz  hinf11.result.xz  hinf12.result.xz  hinf13.result.xz  hinf14.result.xz  hinf15.result.xz  (+51 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
mpack/: Mutils.cpp  Mxerbla.cpp  Raxpy.cpp  Raxpy_omp.cpp  Rcopy.cpp  Rcopy_omp.cpp  Rdot.cpp  Rdot_omp.cpp  Rgemm.cpp  Rgemm_NN_omp.cpp  Rgemm_TN_omp.cpp  Rgemm_omp.cpp  Rgemv.cpp  Rger.cpp  Rlae2.cpp  Rlaev2.cpp  Rlamch.cpp  Rlanst.cpp  Rlansy.cpp  Rlapy2.cpp  Rlarf.cpp  Rlarfb.cpp  Rlarfg.cpp  Rlarft.cpp  Rlartg.cpp  Rlascl.cpp  Rlaset.cpp  Rlasr.cpp  Rlasrt.cpp  Rlassq.cpp  Rlatrd.cpp  Rnrm2.cpp  Rorg2l.cpp  Rorg2r.cpp  Rorgql.cpp  Rorgqr.cpp  Rorgtr.cpp  Rpotf2.cpp  Rpotrf.cpp  Rscal.cpp  (+20 more)
mplapack/: Mlsame.cpp  Mutils.cpp  Mxerbla.cpp  Raxpy.cpp  Raxpy_omp.cpp  Rcombssq.cpp  Rcopy.cpp  Rcopy_omp.cpp  Rdot.cpp  Rgemm_NN_omp.cpp  Rgemm_NT_omp.cpp  Rgemm_TN_omp.cpp  Rgemm_TT_omp.cpp  Rgemm_omp.cpp  Rgemv.cpp  Rger.cpp  Risnan.cpp  Rlae2.cpp  Rlaev2.cpp  Rlaisnan.cpp  Rlamch.cpp  Rlanst.cpp  Rlansy.cpp  Rlapy2.cpp  Rlarf.cpp  Rlarfb.cpp  Rlarfg.cpp  Rlarft.cpp  Rlartg.cpp  Rlascl.cpp  Rlaset.cpp  Rlasr.cpp  Rlasrt.cpp  Rlassq.cpp  Rlatrd.cpp  Rnrm2.cpp  Rorg2l.cpp  Rorg2r.cpp  Rorgql.cpp  Rorgqr.cpp  (+28 more)
